# Peoject-1-c_game

./: CMakeLists.txt  Doxyfile  README.md
include/: display_tetris.h
src/: display_menu.c  display_tetris.c  main.c  result.c  update.c
